--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <p class="close">X</p>
             <img src="perrito.svg">
             <div class="modal-textos">
-                <h2>Felicitaciones, abriste el primer modal de Lucho</h2>
-                <p>Gracias por la buena onda y por darle click al boton!</p>
+                <h2>Modal Abierto!</h2>
+                <p class="parrafo">Gracias por la buena onda y por darle click al boton!</p>
             </div>
         </div>
     </div>
